--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ hr {
 
 p {
   font-size: 20px;
-  color: black;
+  color: white;
 }
 
 a {
@@ -106,5 +106,9 @@ body {
   padding-top: 0px;>
   font-family: 'Georgia', serif;
   background-color: gray;
-  color: #242424;
+  color: gray;
+}
+
+h4 {
+  color: white
 }
