--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,18 @@
   background-color: #863ee3;
   border-radius: 0;
   background-image: none;
+  padding-bottom: 10px
 }
+
+
+
 
 /* Navbar title */
 .navbar-default .navbar-brand {
   color: white;
   font-size: 20px;
   font-weight: bold;
+  padding-bottom: 10px
 }
 
 /* Navbar hover effects */
@@ -109,6 +114,15 @@ body {
   color: gray;
 }
 
+h3 {
+  color: black
+}
+
 h4 {
   color: white
+}
+
+h5 {
+  color: black;
+  font-size: 20x;
 }
