--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@
 
 .resume h3 {
   font-weight: bold;
+  color: white;
 }
 
 hr {
@@ -127,6 +128,17 @@ h5 {
   font-size: 20x;
 }
 
-.resume h4{
+h6{
   color: black;
+  font-size: 15px;
+}
+
+.resume h4{
+  color: black
+}
+
+
+ul{
+  font-size: 18px;
+  color: #3c3c3c;
 }
