updates to text & images on main, resume, about

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 /***** NAVBAR *****/
 .navbar-default {
   background-color: #863ee3;
@@ -129,7 +132,7 @@ h5 {
 }
 
 h6{
-  color: black;
+  color: white;
   font-size: 15px;
 }
 
